# RAG_Evaluation_Pipeline_for_german_technical_Doc_QA

./: .gitignore  ARCHITECTURE.md  OLLAMA_MODEL_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PROJECT_CHECKLIST.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  docker-compose.yml  examples.py  pyproject.toml
app/: __init__.py  main.py
app/core/: config.py  logger.py
app/evaluation/: evaluator.py
app/monitoring/: metrics.py
app/schemas/: responses.py
app/services/: dataset_loader.py  llm.py  rag.py  vector_db.py
data/: eval.json
inference_test_server/: README.md  config-example.yaml  index.html  pyproject.toml  server.py  test_llm.py  test_rag.py
rag/: .env.example  __init__.py  client.py  config.py  evaluation.py  ingest.py  pipeline.py
rag_eval/: .env.example  README.md  chat_with_rag.py  deepeval_runner.py  ingest_docs.py  mlflow_tracking.py  openai_compat.py  pyproject.toml  rag_eval_pipeline.py  rag_query.py  run_deepeval.py  settings.py  vectorstore.py
rag_eval/deepeval_results/: eval__emb-qwen3-embedding-4b__chat-gemma4-31b__judge-qwen3-coder-30b-a3b-instruct.json  eval__emb-qwen3-embedding-4b__chat-qwen3.6-27b__judge-qwen3-coder-30b-a3b-instruct.json
scripts/: load_dataset.py  quick_setup.py  test_rag.py
src/: config.py  ingest.py  rag_pipeline.py  test_llm.py  test_rag.py
