[project]
name = "it-support-helpdesk-rag"
version = "0.1.0"
description = "Enterprise Helpdesk RAG System with LLM Integration"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.0",
    "mlflow>=2.10.0",
    "ollama>=0.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.3",
    "datasets>=2.14.0",
    "huggingface-hub>=0.19.0",
]
